chart/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-echo
  name: simple-echo
spec:
  ports:
  - name: 5678-tcp
    port: 5678
    protocol: TCP
    targetPort: 5678
  selector:
    app: simple-echo
  sessionAffinity: None
  type: ClusterIP
