chart/template/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: simple-echo
  name: simple-echo
spec:
  port:
    targetPort: 5678-tcp
  to:
    kind: Service
    name: simple-echo
    weight: 100
